# MicroWorld

./: .env.example  .gitignore  README.md  RESTRUCTURE_PLAN.md  pyproject.toml
backend/: ARCHITECTURE.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/application/: __init__.py  full_run_service.py  simulation_preparation.py
backend/app/domain/: __init__.py  project.py
backend/app/infrastructure/: __init__.py  file_parser.py  llm_client.py  llm_client_factory.py  retry.py  zep_paging.py
backend/app/run/: full_run.py  local_pipeline.py  parallel_simulation.py
backend/app/setting/: settings.py
backend/app/utils/: __init__.py  (+14 more)
backend/run_scripts/: run_full_pipeline.py  run_local_pipeline.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/test_scripts/: test_profile_format.py
configs/full_run/: full_run.template.json
configs/simulation/: simulation_config.full.template.json
docs/: app.js  architecture.html  demo.html  examples.html  guide.html  index.html  styles.css  template.js  video.html
docs/assets/: feature_chart_data.json
examples/whu_baike_event/: README.md
scripts/: generate_feature_charts.py
scripts/data/: fetch_baidu_baike_event.py
src/lightworld/: __init__.py
src/microworld/: __init__.py
tests/integration/: test_entity_prompt_extractor.py  test_memory_keyword_extractor.py  test_multimodal_ingestion.py  test_profile_format.py  test_simulation_config_events.py  test_simulation_population.py
tests/unit/: test_report_outline_structure.py
(+107 files in other folders)
